--- a/views/publications/index.ejs
+++ b/views/publications/index.ejs
@@ -23,7 +23,7 @@
             <!-- <div class="col-lg-3 col-md-4 col-sm-6 mb-4"> -->
             <div class = 'publication-abstract clo-lg-6'>
                 <div class="card bg-info">
-                    <img class="card-img-top" src="<%= publication.image%>" alt="Card image cap">
+                    <img class="card-img-top my_img_display" src="<%= publication.image%>" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title text-left"><span class="seriesNumber"><%=publication.seriesNumber %></span> <%= publication.title %></h5>
                         <p> <%= publication.citation%></p>
