--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -8,20 +8,20 @@
             <p>all group members comes here</p>
         </div>
     </header>
-    
+      
     <!-- display current group members -->
     <div class="row justify-content-center text-center" id="user-grid">
         <% currentGroupMembers.forEach(function(currentGroupMember){ %>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="card bg-info">
-                    <img class="card-img-top" src="<%= currentGroupMember.selfie%>" alt="Card image cap">
-                    <div class="card-body">
+                <div class="card ">
+                    <img class="card-img-top rounded-circle img-fluid d-block mx-auto" src="<%= currentGroupMember.selfie%>" alt="Card image cap">
+                    <div class="card-body bg-secondary">
                         <h5 class="card-title"><%= currentGroupMember.firstName%> <%=currentGroupMember.lastName %></h5>
                         <p>
-                            <%= Date.now() %>
+                            Join Year: <%= currentGroupMember.joinYear.getFullYear() %>
                         </p>
                         <!--<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
-                        <a href="/users/<%= currentGroupMember._id%>" class="btn btn-primary">More info</a>
+                        <a href="/users/<%= currentGroupMember._id%>" class="btn btn-dark">More info</a>
                     </div>
                 </div>
             </div>
@@ -37,6 +37,9 @@
                     <div class="card-body">
                         <h5 class="card-title"><%= formerGroupMember.firstName%> <%=formerGroupMember.lastName %></h5>
                         <!--<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
+                        <p>
+                            Graduated Year: <%= currentGroupMember.graduateYear.getFullYear() %>
+                        </p>
                         <a href="/users/<%= formerGroupMember._id%>" class="btn btn-primary">More info</a>
                     </div>
                 </div>
