--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -55,6 +55,7 @@
                       <a class="dropdown-item" href="/games/circles">circles</a>
                       <a class="dropdown-item" href="/games/colorgame">colorGame</a>
                       <a class="dropdown-item" href="/games/todolist">toDoList</a>
+                      <a class="dropdown-item" href="/links">Links</a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="#">Something else here</a>
                     </div>
