add links, next: work on pictures on publication show page

--- a/views/publications/edit.ejs
+++ b/views/publications/edit.ejs
@@ -27,6 +27,10 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="journal">Journal Abbreviation</label>
+                    <input class="form-control" id="journal" type="text" name = "publication[journal]" value="<%= publication.journal%>">
+                </div>
+                <div class="form-group">
                     <label for="citation">Citation</label>
                     <input class="form-control" id="citation" type="text" name = "publication[citation]" value="<%= publication.citation%>">
                 </div>
