--- a/views/publications/show.ejs
+++ b/views/publications/show.ejs
@@ -11,7 +11,7 @@
 
         <div class="col-md-3">
             <p class="lead">Journal</p>
-            <img class="img-fluid" src="http://i.imgur.com/K3mPv14.jpg" alt="journal">
+            <img class="img-fluid" src="<%= journal.coverLink%>" alt="journal">
         </div>
         
  
