--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,13 +1,27 @@
-<% include ../partials/header %>
+
+<% include ../partials/indexheader %>
+
+<!-- Page Header -->
+<header class="masthead" style="background-image: url('img/home-bg.jpg')">
+    <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="site-heading">
+                        <h1>Group Members</h1>
+                        <span class="subheading">all publications sites, this page contains all research, bala bala</span>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
+
 
 
 <div class="container">
-    <header class="jumbotron">
-        <div class="container">
-            <h1>This is group members page</h1>
-            <p>all group members comes here</p>
-        </div>
-    </header>
       
     <!-- display current group members -->
     <div class="row justify-content-center text-center" id="user-grid">
