--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -92,5 +92,24 @@ body {
 }
 
 
+/***********************/
+/* links
+/************************/
+
+.journal-card {
+  position: relative;
+}
+
+.journal-caption {
+  color:white;
+  position: absolute;
+  top: 45%;
+  left: 0;
+  width: 100%;
+}
+
+
+
+
 
 /*style for pagination*/
