--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -1,75 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Blogs</title>
-
-  <!-- Bootstrap core CSS -->
-  <!-- bootstrap css -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
-	    integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
-	    crossorigin="anonymous">
-
-  <!-- Custom fonts for this template -->
-  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
-  <!-- Custom styles for this template -->  
-  <link rel="stylesheet" href="stylesheets/clean-blog.min.css" >
-
-</head>
-
-
-<body>
-
-  	<!-- Navigation -->
-  	<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-	    <div class="container">
-
-	       	<div class="navbar-header">
-	            <a class="navbar-brand" href="/">GroupPage</a>
-	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	                <span class="navbar-toggler-icon"></span>
-	            </button>
-	        </div>
-	        
-	      	<div class="collapse navbar-collapse" id="navbarResponsive">
-	       
-	         	<ul class="navbar-nav mr-auto">
-		            <li class="nav-item <%= typeof page !== 'undefined' && page === 'publications' ? 'active' : '' %>">
-		                <a class="nav-link" href="/publications">Publications</a>
-		            </li>
-		            <li class="nav-item">
-		                <a class="nav-link" href="#">Group Members</a>
-		            </li>
-		            <li class="nav-item">
-		                <a class="nav-link" href="/blogs">Blogs</a>
-		            </li>
-		            <li class="nav-item">
-		                <a class="nav-link" href="/contact">Contact Us</a>
-		            </li>
-		        </ul>
-		        <ul class="navbar-nav ml-auto">    
-		            <% if(!currentUser) { %>
-		                <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-		                <li class="nav-item"><a class="nav-link" href="/register">Sign Up</a></li>
-		            <% } else { %>
-		                <li class="nav-item"><a class="nav-link" href="#">Signed In As <%= currentUser.username%></a></li>
-		                <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-		            <% } %>
-		        </ul>
-	        
-	      	</div>
-    	</div>
-  	</nav>
-
+<% include ../partials/indexheader %>
 
   <!-- Page Header -->
   <header class="masthead" style="background-image: url('img/home-bg.jpg')">
@@ -85,7 +15,7 @@
       </div>
     </div>
   </header>
-
+ 
 
   <!-- Main Content -->
   <div class="container">
