--- a/views/links/index.ejs
+++ b/views/links/index.ejs
@@ -4,20 +4,29 @@
 
 <div class="container">
 
-  <h1 class="my-4 text-center text-lg-left">Thumbnail Gallery</h1>
-
-  	<div class="row text-center text-lg-left">
-
-	    <div class="col-lg-3 col-md-4 col-xs-6">
-	      <a href="#" class="d-block mb-4 h-100">
-	        <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-	      </a>
-	    </div>
-
+  	<h1 class="my-4 text-center text-lg-left">Useful Links</h1>
+  	<div class="row justify-content-md-center">
+    	<a class="btn btn-outline-secondary float-left" href="/links/new">Add new link</a>
+    </div>
+    <hr>
+    <!-- display current group members -->
+	<div class="row justify-content-center text-center" id="link-grid">
+	    <% allJournals.forEach(function(journal){ %>
+	        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+	            <div class="card journal-card">
+	                <img class="card-img-top img-fluid d-block mx-auto" src="<%= journal.coverLink%>" alt="Card image cap">
+	                <div class="card-body journal-caption">
+	                    <h5 class="card-title"><%= journal.title%></h5>
+	                    <a href="<%= journal.journalLink %>" class="btn btn-dark">More info</a>
+	                </div>
+	            </div>
+	        </div>
+	    <% }); %>
 	</div>
+
 
 </div>
 
-
+ 
 
 <% include ../partials/footer %>
