--- a/views/partials/indexheader.ejs
+++ b/views/partials/indexheader.ejs
@@ -2,6 +2,11 @@
 <html>
 <head>
 	<title>GroupPage</title>
+
+    <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="description" content="">
+      <meta name="author" content="">
  
     <!-- bootstrap css -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
@@ -19,13 +24,17 @@
     <!-- customed css stylesheets -->
     <link rel="stylesheet" href="/stylesheets/main.css"> 
     <link rel="stylesheet" href="/stylesheets/publication-show.css">
+    <link rel="stylesheet" href="/stylesheets/clean-blog.min.css" >
 
     <!-- google recaptcha js -->
     <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
      
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+  
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+        <!-- <div class="container"> -->
+
         <div class="navbar-header">
             <a class="navbar-brand" href="/">GroupPage</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,6 +81,7 @@
             </ul>
         </div>
     </nav>
+
     
     <div class="container">
         <% if (error && error.length > 0) { %>
