--- a/views/publications/index.ejs
+++ b/views/publications/index.ejs
@@ -1,21 +1,32 @@
-<% include ../partials/header %>
+<% include ../partials/indexheader %>
+
+<!-- Page Header -->
+<header class="masthead" style="background-image: url('img/home-bg.jpg')">
+    <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="site-heading">
+                        <h1>Publications Page</h1>
+                        <span class="subheading">all publications sites, this page contains all research, bala bala</span>
+                        <div class="">
+                            <a class="btn btn-outline-secondary float-left" href="/publications/new">Add new publication</a>
+                            <form class="form-inline my-2 my-lg-0 float-right" action="/publications" method="GET">
+                                <input class="form-control mr-sm-2" type="search" name="search" placeholder="Title Search" aria-label="Search">
+                                <input class="btn btn-outline-secondary" type="submit" value="Search">
+                            </form>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
 
 
 <div class="container">
-    <header class="jumbotron">
-        <h1 class="display-4">This is publications page</h1>
-        <p class="lead">all publications sites, this page contains all research, bala bala</p>
-        <hr class="my-4">
-        <p class="lead">
-            <a class="btn btn-lg btn-primary" href="/publications/new">Add new publication</a>
-        </p>
-        <p class="lead">
-            <form class="form-inline my-2 my-lg-0" action="/publications" method="GET">
-                <input class="form-control mr-sm-2" type="search" name="search" placeholder="Title Search" aria-label="Search">
-                <input class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Search">
-            </form>
-        </p>
-    </header>
     
     <!-- display publications in a grid -->
     <div class="row justify-content-center text-center" id="publication-grid">
