--- a/views/publications/new.ejs
+++ b/views/publications/new.ejs
@@ -31,6 +31,10 @@
                     <input type="file" id="image" name="image" accept="image/*">
                 </div>
                 <div class="form-group">
+                    <label for="journal">Journal Abbreviation</label>
+                    <input class="form-control" id="journal" type="text" name = "publication[journal]" placeholder="JACS/ACIE/OL...">
+                </div>
+                <div class="form-group">
                     <label for="citation">Citation</label>
                     <input class="form-control" id="citation" type="text" name = "publication[citation]" placeholder="Li, K.; Shao, X.; Tseng, L.; Malcolmson, S. J. J. Am. Chem. Soc. 2018, 140, 598.">
                 </div>
