work on picture route, create

--- a/views/publications/edit.ejs
+++ b/views/publications/edit.ejs
@@ -13,6 +13,10 @@
                     <input class="form-control" id="seriesNumber" type="number" name = "publication[seriesNumber]" value="<%= publication.seriesNumber%>">
                 </div>
                 <div class="form-group">
+                    <label for="DOI">DOI</label>
+                    <input class="form-control" id="DOI" type="text" name = "publication[DOI]" value="<%= publication.DOI %>">
+                </div>
+                <div class="form-group">
                     <label for="title">Title</label>
                     <textarea class="form-control" id="title" type="text" name = "publication[title]" form="edit-publication-form" rows="3" cols="70"><%= publication.title%></textarea>
                 </div>
