--- a/views/publications/new.ejs
+++ b/views/publications/new.ejs
@@ -16,6 +16,10 @@
                     <input class="form-control" id="seriesNumber" type="number" name = "publication[seriesNumber]" placeholder="">
                 </div>
                 <div class="form-group">
+                    <label for="DOI">DOI</label>
+                    <input class="form-control" id="DOI" type="text" name = "publication[DOI]" placeholder="">
+                </div>
+                <div class="form-group">
                     <label for="title">Title</label>
                     <textarea class="form-control" id="title" type="text" name = "publication[title]" form="add-publication-form" rows="3" cols="70"></textarea>
                 </div>
