update to group web app

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -24,7 +24,7 @@
     </div>
     
     <div id="landing-header">
- 		<h1>Welcome to Our Group!</h1>
+ 		<h1>Welcome to Our Sample Group Page!</h1>
 		<a href="/publications" class="btn btn-lg btn-success">View All Publications</a>
     </div>
     
