--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -52,9 +52,9 @@
                       Dropdown
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="/games/circles">circles</a>
-                      <a class="dropdown-item" href="/games/colorgame">colorGame</a>
-                      <a class="dropdown-item" href="/games/todolist">toDoList</a>
+                      <a class="dropdown-item" href="#">circles</a>
+                      <a class="dropdown-item" href="#">colorGame</a>
+                      <a class="dropdown-item" href="#">toDoList</a>
                       <a class="dropdown-item" href="/links">Links</a>
                       <a class="dropdown-item" href="/pictures">Pictures</a>
                       <div class="dropdown-divider"></div>
