--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -2,14 +2,14 @@
 <% include ../partials/indexheader %>
 
 <!-- Page Header -->
-<header class="masthead" style="background-image: url('img/home-bg.jpg')">
+<header class="masthead" style="background-image: url('images/ml-chem3.jpg')">
     <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
                     <div class="site-heading">
-                        <h1>Group Members</h1>
-                        <span class="subheading">all publications sites, this page contains all research, bala bala</span>
+                        <h1>Members</h1>
+                        <span class="subheading">Members listed here, bala bala</span>
                     </div>
 
                 </div>
