--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -4,11 +4,11 @@
 	<div class="row">
 		<div class="col">
 			<div style="width:30%; margin:25px auto">
-				<form action="/forgot" method="POST">
+				<form class="text-center" action="/forgot" method="POST">
 					<legend>Forgot Password</legend>
 					<div class="form-group">
 						<label for="email">Email</label>
-						<input type="email" name="email" autofocus class="form-control">
+						<input type="email" name="email" autofocus id="email" class="form-control">
 					</div>
 					<div class="form-group">
 						<input type="submit" class="btn btn-primary" value="Reset Password">
