--- a/views/publications/show.ejs
+++ b/views/publications/show.ejs
@@ -29,23 +29,23 @@
                   </ol>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="http://i.imgur.com/K3mPv14.jpg" alt="First slide">
+                        <img class="d-block w-100" src="https://d1w9csuen3k837.cloudfront.net/Pictures/1280x720/7/1/2/135712_Index_CW120218_Machine-learning-assesses-cross-coupling-reactions.jpg" alt="First slide">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>...</h5>
-                            <p>...</p>
+                            <h5>Machine Learning</h5>
+                            <p>Applications of machine learning</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="http://i.imgur.com/SBEmFpv.jpg" alt="Second slide">
+                        <img class="d-block w-100" src="https://i0.wp.com/pubtechgator.bmj.com/wp-content/uploads/2017/03/tetrascience.commachine-learning-for-chem-3a666e7c7c3441f47e1e83a9ce3e4aceb97a34c5.png?w=736" alt="Second slide">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>...</h5>
-                            <p>...</p>
+                            <h5>Process</h5>
+                            <p></p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="http://i.imgur.com/emvhOnb.jpg" alt="Third slide">
+                        <img class="d-block w-100" src="https://2.bp.blogspot.com/-_T-94jgx2IQ/WuMSV7x3YGI/AAAAAAAAEpE/MWHvPWWGpawLAwzGO5f3xw3JRtdOGxhmQCLcBGAs/s1600/screenshot_1149.png" alt="Third slide">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>...</h5>
+                            <h5>Materials Deisgn</h5>
                             <p>...</p>
                         </div>
                     </div>
