--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -2,9 +2,9 @@
 
 
 <div class="container">
-    <div class="row">
+    <div class="row justify-content-md-center">
     	<div class="col-md-4">
-    	    <div style="width:30%; margin:25px auto">
+    	    <div style="width:90%; margin:25px auto">
         		<form action="/reset/<%= token %>" method="POST">
         		  <legend>Reset Password</legend>
         		  <div class="form-group">
