--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -2,27 +2,34 @@
 
 
 <div class="row">
-    <div class="col-md-12">
-        
-        <form class="form-signin" action="/users/login" method="POST">
-              <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-              <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
-              <label for="username" class="sr-only">Username</label>
-              <input type="text" id="username" class="form-control" name="username" placeholder="username" required autofocus>
-              <label for="inputPassword" class="sr-only">Password</label>
-              <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
-              <div class="checkbox mb-3">
-                <label>
-                  <input type="checkbox" value="remember-me"> Remember me
-                </label>
-              </div>
-              <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
-        </form>
-        <div class="form-signin">
-            <a href="/publications">Go Back</a>
-        </div>
+	<div class="col-md-12">
 
-    </div>
+		<form class="form-signin text-center" action="/users/login" method="POST">
+			<img class="mb-4" src="https://cdn0.iconfinder.com/data/icons/cloudy-2/425/lock-512.png" alt="" width="72" height="72">
+			<h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
+			<label for="username" class="sr-only">Username</label>
+			<input type="text" id="username" class="form-control" name="username" placeholder="username" required autofocus>
+			<label for="inputPassword" class="sr-only">Password</label>
+			<input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
+			<div class="checkbox mb-3">
+				<label>
+					<input type="checkbox" value="remember-me"> Remember me
+				</label>
+			</div>
+			<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+
+			<div class="row">
+				<div class="form-signin">
+					<a href="/publications">Go Back</a>
+				</div>
+				<div class="form-signin">
+					<a href="/forgot">Forgot Password</a>
+				</div>
+			</div>
+
+		</form>
+
+	</div>
 </div>
 
 <% include ../partials/footer %>
