--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -88,7 +88,7 @@
     <!--  *****************  -->
 
   	<div class="col-lg-8">
-  		<h3><%= user.username %>'s Publications List</h3>
+  		<h3><%= user.username %>'s Added these publications (In real web, this should be author's publication)</h3>
 
       <!-- display publications in a grid -->
       <div class="row justify-content-center text-center" id="publication-grid">
