--- a/views/partials/indexheader.ejs
+++ b/views/partials/indexheader.ejs
@@ -67,7 +67,7 @@
                       <a class="dropdown-item" href="/links">Links</a>
                       <a class="dropdown-item" href="/pictures">Pictures</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Something else here</a>
+                      <a class="dropdown-item" href="/developmentnotes">developmentnotes</a>
                     </div>
                 </li>
             </ul>
