--- a/views/partials/indexheader.ejs
+++ b/views/partials/indexheader.ejs
@@ -61,9 +61,9 @@
                       Dropdown
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="/games/circles">circles</a>
+                      <!-- <a class="dropdown-item" href="/games/circles">circles</a>
                       <a class="dropdown-item" href="/games/colorgame">colorGame</a>
-                      <a class="dropdown-item" href="/games/todolist">toDoList</a>
+                      <a class="dropdown-item" href="/games/todolist">toDoList</a -->>
                       <a class="dropdown-item" href="/links">Links</a>
                       <a class="dropdown-item" href="/pictures">Pictures</a>
                       <div class="dropdown-divider"></div>
